--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div id="profile"> 
                  	<!-- About section -->
                 	<div class="about">
-                    	<div class="photo-inner"><img src="images/photo.jpg" height="186" width="153" /></div>
+                    	<div class="photo-inner"><img src="images/asad.jpg" height="186" width="153" /></div>
                         <h1>MUHAMMAD ASAD ASHRAF</h1>
                         <h3>SOFTWARE DEVELOPER AND WEB DEVELOPER</h3>
                         <p>I like to make cool software and creative designs. My design stash is always full of refreshing ideas. Feel free to take a look around my Vcard.</p>
