--- a/index.html
+++ b/index.html
@@ -65,12 +65,13 @@
                      
                     <!-- Personal info section -->
                 	<ul class="personal-info">
-						<li><label>Name</label><span>Muhammad Asad</span></li>
+						<li><label>Name</label><span>Muhammad Asad Ashraf</span></li>
                         <li><label>Date of birth</label><span>October 26, 1993</span></li>
                         <li><label>Address</label><span>Azizabad F.B.Area Karachi 76000 Pakistan</span></li>
                         <li><label>Email</label><span>rouhan_1993@hotmail.com</span></li>
                         <li><label>Phone</label><span>+923 333 223 1991</span></li>
-                        <li><label>Website</label><span>www.asadashraf.com</span></li>
+                        <li><label>Website</label><span>www.asadashraf.azurewebsites.net</span></li>
+
                     </ul>
                     <!-- /Personal info section -->
                 </div>        
@@ -189,10 +190,14 @@
                     </div>
                     <div class="skills-section">
                         <!-- Skills -->
-                        <h3 class="main-heading"><span>Graphics and Development skills</span></h3>
+                        <h3 class="main-heading"><span>Tools skills</span></h3>
                         <ul class="skills">
                             <li>
                                 <h4>Photoshop</h4>
+                                <span class="rat5"></span>
+                            </li>
+                            <li>
+                                <h4>MS Office</h4>
                                 <span class="rat5"></span>
                             </li>
                             <li>
@@ -202,6 +207,10 @@
                             <li>
                                 <h4>Microsoft Visual Studio</h4>
                                 <span class="rat6"></span>
+                            </li>
+                            <li>
+                                <h4>Microsoft SQL Server</h4>
+                                <span class="rat4"></span>
                             </li>
                             <li>
                                 <h4>Jet Brains PHP Storm</h4>
@@ -220,7 +229,10 @@
                                 <h4>Php</h4>
                                 <span class="rat3"></span>
                             </li>
-
+                            <li>
+                                <h4>C Language</h4>
+                                <span class="rat5"></span>
+                            </li>
                             <li>
                                 <h4>Javascript</h4>
                                 <span class="rat1"></span>
@@ -228,8 +240,9 @@
 
                             <li>
                                 <h4>Wordpress/Joomla</h4>
-                                <span class="rat1"></span>
+                                <span class="rat3"></span>
                             </li>
+
                             <li>
                                 <h4>HTML CSS</h4>
                                 <span class="rat4"></span>
@@ -247,10 +260,10 @@
                      <ul id="portfolio-filter">
                         <li><a href="" class="current" data-filter="*">All</a></li>
                         <li><a href="" data-filter=".webdesign">WebDesign</a></li>
-                        <li><a href="" data-filter=".photoghraphy">Photoghraphy</a></li>
-                        <li><a href="" data-filter=".illustration">Illustration</a></li>
-                        <li><a href="" data-filter=".print">Print</a></li>
-                        <li><a href="" data-filter=".animation">Animation</a></li>
+                        <li><a href="" data-filter=".photoghraphy">Logo design</a></li>
+                        <li><a href="" data-filter=".illustration">Mobile Application</a></li>
+                        <li><a href="" data-filter=".print">Projects</a></li>
+                        <li><a href="" data-filter=".animation">letc</a></li>
                     </ul>
                     <div class="extra-text">Some of the projects i'm proud with</div>
                     <ul id="portfolio-list">
@@ -324,7 +337,7 @@
                         <li>281 Block 8 Azizabad F.B.Area Karachi Pakistan<br /><br /></li>
                         <li>Email: rouhan_1993@hotmail.com</li>
                         <li>Phone: +923 333 223 1991</li>
-                        <li>Website: www.asadashraf.com</li>
+                        <li>Website: www.asadashraf.azurewebsites.net</li>
                     </ul>
                     </div>
                     <!-- /Contact Info -->
