portfolio left only

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     
-    <title>Personal vCard Template</title>
+    <title>My Personal Website</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -33,7 +33,7 @@
             	<!-- Logo -->
             	<div id="logo">
                 	<h2>MUHAMMAD ASAD ASHRAF</h2>
-                    <h4>SOFTWARE DEVELOPER AND WEB DEVELOPER</h4>
+                    <h4>SOFTWARE AND WEB DEVELOPER</h4>
                 </div>
                 <!-- /Logo -->
                 
@@ -58,7 +58,7 @@
                 	<div class="about">
                     	<div class="photo-inner"><img src="images/asad.jpg" height="186" width="153" /></div>
                         <h1>MUHAMMAD ASAD ASHRAF</h1>
-                        <h3>SOFTWARE DEVELOPER AND WEB DEVELOPER</h3>
+                        <h3>SOFTWARE AND WEB DEVELOPER</h3>
                         <p>I like to make cool software and creative designs. My design stash is always full of refreshing ideas. Feel free to take a look around my Vcard.</p>
                     </div>
                     <!-- /About section -->
@@ -231,7 +231,7 @@
                             </li>
                             <li>
                                 <h4>C Language</h4>
-                                <span class="rat5"></span>
+                                <span class="rat4"></span>
                             </li>
                             <li>
                                 <h4>Javascript</h4>
@@ -268,27 +268,71 @@
                     <div class="extra-text">Some of the projects i'm proud with</div>
                     <ul id="portfolio-list">
                         <li class="illustration print">
-                            <a href="portfolio/1.jpg" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam quis mi eu elit tempor facilisis id et neque" rel="portfolio" class="folio">
-                                <img src="portfolio/1-thumb.jpg" alt="">
-                                <h2 class="title">Hello Goodbye</h2>
-                                <span class="categorie">Print / Illustration</span> 
+                            <a href="portfolio/eyeslide.png" title="Your eyes are an important part of your health. There are many things you can do to keep them healthy and make sure you are seeing your best. Follow these simple steps for maintaining healthy eyes well into your golden years." rel="portfolio" class="folio">
+                                <img src="portfolio/thumb-eye.png" alt="">
+                                <h2 class="title">Healthy Eye Tip</h2>
+                                <span class="categorie">Windows Phone Application</span>
                             </a>
                     	</li>
-                        <li class="webdesign">
-                            <a href="http://www.youtube.com/embed/c9MnSeYYtYY?autoplay=1" rel="portfolio" class="folio iframe">
-                                <img src="portfolio/3-thumb.jpg" alt="" >
-                                <h2 class="title">Snow time</h2>
-                                <span class="categorie">Webdesign</span> 
+                        <li class="illustration">
+                            <a href="portfolio/cngslide.png" rel="portfolio" class="folio">
+                                <img src="portfolio/cng.png" alt="" >
+                                <h2 class="title">CNG Schedule Reminder</h2>
+                                <span class="categorie">Windows Phone Application</span>
                             </a>
-                    	</li>                        
+                        </li>
+                        <li class="illustration">
+                            <a href="portfolio/calculatorslide.png" rel="portfolio" class="folio">
+                                <img src="portfolio/calculator.png" alt="" >
+                                <h2 class="title">Easy Scientific Calculator</h2>
+                                <span class="categorie">Windows Phone Application</span>
+                            </a>
+                        </li>
                         <li class="photoghraphy">
-                            <a href="http://www.google.com" rel="portfolio" target="_new">
-                                <img src="portfolio/2-thumb.jpg" alt="" >                            
-                                <h2 class="title">Help us</h2>
-                                <span class="categorie">Photography</span> 
+                            <a href="portfolio/mozillaslide.jpg" rel="portfolio" class="folio">
+                                <img src="portfolio/mozilla.jpg" alt="" >
+                                <h2 class="title">Mozilla Pakistan</h2>
+                                <span class="categorie">Logo designing</span>
                             </a>
                     	</li>
-                        <li class="animation print">
+                        <li class="photoghraphy">
+                            <a href="portfolio/mozilla2.jpg" rel="portfolio" class="folio">
+                                <img src="portfolio/mozilla2slide.jpg" alt="" >
+                                <h2 class="title">Logo For Mozilla Pakistan</h2>
+                                <span class="categorie">Logo designing</span>
+                            </a>
+                        </li>
+                        <li class="photoghraphy">
+                            <a href="portfolio/toyota.jpg" title="A Dealer of Spare Parts official Toyota Dealer" rel="portfolio" class="folio">
+                                <img src="portfolio/toyotaslide.jpg" alt="" >
+                                <h2 class="title">Logo For Toyota Zafrees</h2>
+                                <span class="categorie">Logo designing</span>
+                            </a>
+                        </li>
+                        <li class="photoghraphy">
+                            <a href="portfolio/Typing.png"  rel="portfolio" class="folio">
+                                <img src="portfolio/Typingslide.png" alt="" >
+                                <h2 class="title">Logo For TYPING MOHD.Al-ABYAD</h2>
+                                <span class="categorie">Logo designing</span>
+                            </a>
+                        </li>
+
+                        <li class="photoghraphy">
+                            <a href="portfolio/vantageslide.png"  rel="portfolio" class="folio">
+                                <img src="portfolio/vantagelogo.png" alt="" >
+                                <h2 class="title">Logo For Vantage</h2>
+                                <span class="categorie">Logo designing</span>
+                            </a>
+                        </li>
+                        <li class="photoghraphy">
+                            <a href="portfolio/Vantageblue.png"  rel="portfolio" class="folio">
+                                <img src="portfolio/Vantageblueslide.png" alt="" >
+                                <h2 class="title">Logo For Vantage in Blue</h2>
+                                <span class="categorie">Logo designing</span>
+                            </a>
+                        </li>
+
+                       <!-- <li class="animation print">
                             <a href="portfolio/4.jpg" rel="portfolio" class="folio">
                                 <img src="portfolio/4-thumb.jpg" alt="" >
                                 <h2 class="title">Sunshine</h2>
@@ -306,23 +350,17 @@
                             <a href="portfolio/6.jpg" rel="portfolio" class="folio">
                                 <img src="portfolio/6-thumb.jpg" alt="" >
                                 <h2 class="title">The yellow</h2>
-                                <span class="categorie">Webdesign / Print</span> 
+                                <span class="categorie">Webdesign</span>
                             </a>
                     	</li>
-                        <li class="photoghraphy">
-                            <a href="portfolio/7.jpg" rel="portfolio" class="folio">
-                                <img src="portfolio/7-thumb.jpg" alt="" >
-                                <h2 class="title">Black bird</h2>
-                                <span class="categorie">Photoghraphy</span> 
+                        <li class="webdesign">
+                            <a href="http://www.windowsphone.com/en-pk/store/app/healthy-eye-tip/99a01047-dc34-465f-aa56-0529eb236c81" rel="portfolio" class="folio iframe">
+                                <img src="portfolio/3-thumb.jpg" alt="" >
+                                <h2 class="title">Snow time</h2>
+                                <span class="categorie">Webdesign</span>
                             </a>
-                    	</li>
-                        <li class="illustration">
-                            <a href="portfolio/8.jpg" rel="portfolio" class="folio">
-                                <img src="portfolio/8-thumb.jpg" alt="" >
-                                <h2 class="title">Revolution</h2>
-                                <span class="categorie">Illustration</span> 
-                            </a>
-                    	</li>
+                        </li>-->
+
                     </ul>
                 </div>
                 <!-- /Portfolio -->   
