--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                     <ul id="portfolio-list">
                         <li class="illustration print">
                             <a href="portfolio/eyeslide.png" title="Your eyes are an important part of your health. There are many things you can do to keep them healthy and make sure you are seeing your best. Follow these simple steps for maintaining healthy eyes well into your golden years." rel="portfolio" class="folio">
-                                <img src="portfolio/thumb-eye.png" alt="">
+                                <img src="portfolio/eye.png" alt="">
                                 <h2 class="title">Healthy Eye Tip</h2>
                                 <span class="categorie">Windows Phone Application</span>
                             </a>
