--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <li><label>Date of birth</label><span>October 26, 1993</span></li>
                         <li><label>Address</label><span>Azizabad F.B.Area Karachi 76000 Pakistan</span></li>
                         <li><label>Email</label><span>rouhan_1993@hotmail.com</span></li>
-                        <li><label>Phone</label><span>+923 333 223 1991</span></li>
+                        <li><label>Phone</label><span>+923 324 2829289</span></li>
                         <li><label>Website</label><span>www.asadashraf.azurewebsites.net</span></li>
 
                     </ul>
@@ -147,7 +147,7 @@
                          <ul class="timeline">
                             <li>            
                                 <div class="timelineUnit">
-                                    <h4>University of Karachi<span class="timelineDate">2012 - 2015(Present)</span></h4>
+                                    <h4>University of Karachi<span class="timelineDate">2012 - 2015</span></h4>
                                     <h5>Umaer Basha Institute of Technology (UBIT)</h5>
                                     <p>Bachelor of Science in Computer Science - BSCS </p>
                                 </div>
@@ -220,29 +220,20 @@
                    
                         <h3 class="main-heading"><span>Programming Skills</span></h3> 
                         <ul class="skills">
+			    <li>
+                                <h4>C++</h4>
+                                <span class="rat4"></span>
+                            </li>
                             <li>
                                 <h4>Dot Net C#</h4>
                                 <span class="rat4"></span>
                             </li>
 
-                            <li>
-                                <h4>Php</h4>
-                                <span class="rat3"></span>
-                            </li>
+                  
                             <li>
                                 <h4>C Language</h4>
                                 <span class="rat4"></span>
-                            </li>
-                            <li>
-                                <h4>Javascript</h4>
-                                <span class="rat1"></span>
-                            </li>
-
-                            <li>
-                                <h4>Wordpress/Joomla</h4>
-                                <span class="rat3"></span>
-                            </li>
-
+				</li>
                             <li>
                                 <h4>HTML CSS</h4>
                                 <span class="rat4"></span>
