--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             	<!-- Logo -->
             	<div id="logo">
                 	<h2>MUHAMMAD ASAD ASHRAF</h2>
-                    <h4>Software Engineer at TPS - Cards & Payments Fintech</h4>
+			<h4>System Developer at Abbrevia FZ LLC</h4>
                 </div>
                 <!-- /Logo -->
                 
