--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 	<div class="about">
                     	<div class="photo-inner"><img src="images/asad.jpg" height="186" width="153" /></div>
                         <h1>MUHAMMAD ASAD ASHRAF</h1>
-                        <h3>Software Engineer at TPS - Cards & Payments Fintech</h3>
+                        <h3>System Developer at Abbrevia FZ LLC</h3>
                         <p>Experienced Software Engineer with a demonstrated history of working with TPS Pvt Limited. Skilled in SQL, Oracle Database, Computer Science, and C++ in Linux operating system.</p>
                     </div>
                     <!-- /About section -->
